correction mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -502,7 +502,10 @@ h3 {
   .back-mobile {
     width: 100%;
     max-width: 600px;
-    padding: 35px 20px 100px;
+    padding: 100px 20px 0;
+  }
+  .back-mobile h2 {
+    margin-bottom: 48px;
   }
   .mobile-block {
     display: flex;
@@ -520,7 +523,7 @@ h3 {
     width: 100%;
     max-width: 575px;
     order: 2;
-    padding-top: 15px;
+    padding-top: 16px;
   }
 }
 .font-size-15 {
